--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-table-with-tree-grid": "^0.2.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
